add a mapping from loc to probe

--- a/tri_ins/config.ini
+++ b/tri_ins/config.ini
@@ -19,5 +19,7 @@ output_dir = output
 raw_csv = raw.csv
 ; Filename for Chrome trace JSON (viewable in chrome://tracing or Perfetto)
 trace_json = trace.json
+; Filename for probe-to-source-line mapping JSON
+loc_map = loc_map.json
 ; Whether to save original and instrumented PTX
 dump_ptx = True
