--- a/tri_ins/config.ini
+++ b/tri_ins/config.ini
@@ -23,3 +23,11 @@ trace_json = trace.json
 loc_map = loc_map.json
 ; Whether to save original and instrumented PTX
 dump_ptx = True
+
+[sanitizer]
+; Enable dead-probe elimination (remove probes never executed)
+dead = True
+; Enable probe merging (merge adjacent 1:1 probes on same source line)
+merge = True
+; Output filename for active probe list
+active_list = active_probes.json
