refine the sanitizer

--- a/tri_ins/config.ini
+++ b/tri_ins/config.ini
@@ -31,3 +31,5 @@ dead = True
 merge = True
 ; Output filename for active probe list
 active_list = active_probes.json
+; Output filename for sanitized Chrome trace JSON
+sanitized_trace = sanitized_trace.json
