Rewrite probes, README and simplify scripts

--- a/tri_ins/config.ini
+++ b/tri_ins/config.ini
@@ -1,33 +1,22 @@
 [instrument]
-; Probing mode: "block" (probe by global thread range)
 mode = block
-; target_file: which source-file index (from ".loc <file> <line> <col>") to instrument.
-; Triton PTX can reference multiple Python files. Run once and look for the
-; "Source file indices seen in .loc" log line to find the right value.
 target_file = 1
-; Thread range to probe (inclusive)
 t_start = 0
 t_end = 127
-; Estimated number of probes for buffer allocation.
-; Must account for loop iterations! Use a generous value.
-n_probes_estimate = 1024
+n_probes_estimate = 4096
 
-[output]
-; Directory for output files (relative to the script that imports tri_ins)
-output_dir = output
-; Filename for the raw timing CSV
-raw_csv = raw.csv
-; Filename for Chrome trace JSON (viewable in chrome://tracing or Perfetto)
-trace_json = trace.json
-; Filename for probe-to-source-line mapping JSON
+[analysis]
+analysis_dir = analysis
+active_list = active_probes.json
 loc_map = loc_map.json
-; Whether to save original and instrumented PTX
-dump_ptx = True
 
 [sanitizer]
-; Enable dead-probe elimination (remove probes never executed)
-dead = True
-; Enable probe merging (merge adjacent 1:1 probes on same source line)
-merge = True
-; Output filename for active probe list
-active_list = active_probes.json
+enable = False
+dead = False
+merge = False
+
+[output]
+output_dir = output
+raw_csv = raw.csv
+trace_json = trace.json
+dump_ptx = True
